# HyLoRes_Source

./: .boring  AUTHORS  Changes  README.md  darcs-temp-mail-0  hylores.cabal
2.4/: README  hylores.cabal
2.4/_darcs/: hashed_inventory  tentative_pristine
2.4/_darcs/inventories/: 0000031259-c2a1c3ca9669525885a892b3fba0264f09d568ef124209a359acd882eb494366
2.4/_darcs/patches/: 0000000096-43e1af4ec73505630d57f6587ecb568b4127c7fa63f6d2ed96901d2d248533a5  0000000143-6955550def6c95d9bdf8f9f0cd4b4a3e999b65caa2fb92326dd1f936d1dcc35e  0000000146-93756841343915755becf528e8dd12c7576a51f3637da5b6625bca9fabcbb219  0000000179-717d192b8732f36b8638597713b5bf4a0b3ddb445745c8f03fcaeddbec4655f5  0000000187-e90e2a070242d65788d8889807ca718accc9b2aae987ebe2278c3bbb7af31ae8  0000000208-2a7f9385533c2f5b9b31249f636397d3ee90da9690297d89db6feb1ce5db8741  0000000212-a6a8d8372ad1c311fb23b21857962d28efba2f24800e94c5188b3b604e8ffb0c  0000000234-90f10c6b554b4936fb5a4d5060ef13c3673ee4aad07f5a1fab167d3524c567ee  0000000246-5627a4db4492a052836e46ea133d9eec8efdaceb1dd0a7a7eabf207fa4feec2b  0000000253-8cb12eb2a459620fb32c02e15b0d031658fd8d63440da245968ae54fd38196df  0000000266-4217a7ee48f2ddba9b1089e44d10e0079bf2cb9006783813d098ccf7e4a6346d  0000000274-2d1533dfea4df3e67d9ba60a98045e75b0dee1a589c3a0d91d24913e660dd352  0000000277-62edea5708bc2cb5698c1a2871f1ef5a22262e22a3c15e18b83f86ba05829bd4  0000000318-222a68f28607eacba3c7870a6e74e2aa759e80be0436099d708c251fd8594d0d  0000000346-a3fcf7ca2857bf78c545684024d3a48474f4ba47c79c20d9c9949c892dd2afa7  0000000350-fdd2d349331d4c5a1e12393b49a6278c64205899c258bcf0bdb455171baab5f9  (+105 more)
2.4/_darcs/prefs/: prefs  repos  (+1 more)
2.4/doc/: cambios.txt
2.4/examples/: runsat.sh  rununsat.sh
2.4/src/: hylores.hs
(+269 files in other folders)
