Name:                hylores
Version:             2.5-devel
Description:         Resolution based theorem prover for hybrid logics
License:             GPL
License-file:        LICENSE
Author:              Carlos Areces, Daniel Gorin and Juan Heguiabehere
Maintainer:          dgorin@dc.uba.ar
Cabal-version:       >= 1.2
Build-type:          Simple

Flag static
  Description: Build a static binary
  Default:     False

Executable          hylores
  Main-is:             hylores.hs
  hs-source-dirs:      src
  Build-Depends:       base >= 3, base < 5,
                       containers < 1,
                       array < 1,
                       mtl >= 1, mtl <= 3,
                       filepath >= 1, filepath < 2,
                       directory >= 1, directory < 2,
                       QuickCheck >= 1, QuickCheck < 2,
                       hylolib >= 1.3, hylolib < 1.4,
                       data-hash,
                       stm
  Extensions:          GADTs
                       EmptyDataDecls
                       ScopedTypeVariables
                       GeneralizedNewtypeDeriving
                       Rank2Types
                       MultiParamTypeClasses
                       TypeFamilies
                       FunctionalDependencies
                       FlexibleContexts
                       FlexibleInstances
                       TypeSynonymInstances
                       UndecidableInstances
                       OverlappingInstances
  ghc-options:         -O2 -Wall -threaded
  ghc-prof-options:    -auto-all

  if flag(static)
    ghc-options: -static -optl-static
